--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2>About me</h2>
             <div id="de"></div>
                     <div id="profileimg">
-                        <img src="image/profile.jpg">
+                        <img src="image/yoon.jpg">
                     </div>
                     <table class="a">
                         <tr class="aa">
