--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <br><br>
                 결과, 과정, 시작 중 시작을 가장 중요하게 생각하고<br> 
                 앞으로 뭘 해야하나 라는 고민끝에
-                웹 개발자 라는 직업에 확고한 결정을 한 김윤원입니다.</p><br>
+                웹 개발자 라는 직업에 확고한 목표를 가지고 꾸준히 성장중인 김윤원입니다.</p><br>
                 
             
             <video autoplay muted loop>
