--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#archiving">Archiving</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#education">Education</a></li>
+                    <!-- <li><a href="#education">Education</a></li> -->
                     
                 </ul>
             </nav>
