git adress commit

--- a/index.html
+++ b/index.html
@@ -402,9 +402,10 @@
         <div id="footer" class="con6">
             <footer id="na">
                 <nav style="margin-top: 30px;">
-                    <a href="https://github.com/KimYoonWon" target='_blank'>깃허브</a> |
-                    <a href="https://blog.naver.com/java-king96" target='_blank'>블로그</a> |
-                    <a href="https://it-javamyhand.tistory.com/" target='_blank'>티스토리</a>
+                    <a href="https://github.com/YoonwonKim" target='_blank'>깃허브</a> |
+                    <a href="https://it-javamyhand.tistory.com" target='_blank'>티스토리</a> |
+                    <a href="https://blog.naver.com/java-king96" target='_blank'>네이버 블로그</a> 
+                    
                 </nav>
                 <p style="margin-top: 8px;">
                     <span>Copyright 2024. Kim Yoon Won. All rights reserved.
